# marriage

./: pyproject.toml
data/: .~lock.nemkell.csv#  .~lock.numeric.csv#  nemkell.csv  numeric.csv  numeric_with_labels.csv  twodimensions.csv
data/raw/ecoClimate/: data.csv  variables.csv
src/: data_analysis.ipynb  data_preparation.ipynb
src/.ipynb_checkpoints/: data_analysis-checkpoint.ipynb  data_preparation-checkpoint.ipynb
