[tool.poetry]
name = "marriage"
version = "0.1.0"
description = ""
authors = ["Zoltan Varju <zoltan.varju@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
umap-learn = "^0.5.6"
altair = "^5.3.0"
scikit-learn = "^1.5.0"
vega-datasets = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
